--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     Scoreboard is running.<br/>
-    <a href="/scoreboard.html">click here for the overlay</a>
+    <a href="/admin">click here for the admin</a>
 </body>
 </html>
