--- a/html/overlays/melee/singles/index.html
+++ b/html/overlays/melee/singles/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 <head>
@@ -86,7 +86,7 @@
 		</div>
 	</div>
 	
-	<script src="js/lib/vue.js"></script>
+	<script src="/lib/vue/vue.js"></script>
 	<script src="js/hypest-score.js"></script>
 </body>
 </html>
