Changed api to allow more than 2 players

--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -19,31 +19,31 @@
                     <div class="row">
                         <div class="col form-group">
                             <label>Name</label>
-                            <input type="text" class="form-control" v-model="scoreBoard.Player1.name" />
+                            <input type="text" class="form-control" v-model="scoreBoard.players[0].name" />
                         </div>
 
 
                         <div class="col form-group">
                             <label>Character</label>
-                            <input type="text" class="form-control" v-model="scoreBoard.Player1.character.name" />
+                            <input type="text" class="form-control" v-model="scoreBoard.players[0].character.name" />
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col form-group">
                             <label>Flag</label>
-                            <input type="text" class="form-control" v-model="scoreBoard.Player1.flag.name" />
+                            <input type="text" class="form-control" v-model="scoreBoard.players[0].flag.name" />
                         </div>
 
                         <div class="col form-group">
                             <label>Sponsor</label>
-                            <input type="text" class="form-control" v-model="scoreBoard.Player1.sponsor.name" />
+                            <input type="text" class="form-control" v-model="scoreBoard.players[0].sponsor.name" />
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label>Score</label>
-                        <input type="number" class="form-control" v-model="scoreBoard.Player1.score" />
+                        <input type="number" class="form-control" v-model="scoreBoard.players[0].score" />
                     </div>
                 </div>
 
@@ -52,31 +52,31 @@
                     <div class="row">
                         <div class="col form-group">
                             <label>Name</label>
-                            <input type="text" class="form-control" v-model="scoreBoard.Player2.name" />
+                            <input type="text" class="form-control" v-model="scoreBoard.players[1].name" />
                         </div>
 
 
                         <div class="col form-group">
                             <label>Character</label>
-                            <input type="text" class="form-control" v-model="scoreBoard.Player2.character.name" />
+                            <input type="text" class="form-control" v-model="scoreBoard.players[1].character.name" />
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col form-group">
                             <label>Flag</label>
-                            <input type="text" class="form-control" v-model="scoreBoard.Player2.flag.name" />
+                            <input type="text" class="form-control" v-model="scoreBoard.players[1].flag.name" />
                         </div>
 
                         <div class="col form-group">
                             <label>Sponsor</label>
-                            <input type="text" class="form-control" v-model="scoreBoard.Player2.sponsor.name" />
+                            <input type="text" class="form-control" v-model="scoreBoard.players[1].sponsor.name" />
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label>Score</label>
-                        <input type="number" class="form-control" v-model="scoreBoard.Player2.score" />
+                        <input type="number" class="form-control" v-model="scoreBoard.players[1].score" />
                     </div>
                 </div>
 
