--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -59,11 +59,15 @@
                                 <div class="input-group">
                                     <div class="input-group-prepend">
                                         <div class="input-group-text">
-                                            <img v-bind:src="'/lib/famfamfam-flags/png/' + player.flag.icon.toLowerCase() + '.png'" height="24" v-if="player.flag.icon" />
+                                            <img v-bind:src="'/lib/famfamfam-flags/png/' + player.flag.icon" height="16" v-if="player.flag.icon" />
                                             <span v-if="!player.flag.icon">?</span>
                                         </div>
                                     </div>
-                                    <input type="text" class="form-control" v-model="player.flag.icon" />
+                                    <select class="form-control"  v-model="player.flag">
+                                        <option v-for="(flagName, flagAbbr) in flagList" v-bind:value="{name: flagName, icon: flagAbbr.toLowerCase() + '.png'}">
+                                            {{ flagName }}
+                                        </option>
+                                    </select>
                                 </div>
                             </div>
 
