Improved flags with SVG support

--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -64,7 +64,7 @@
                                         </div>
                                     </div>
                                     <select class="form-control"  v-model="player.flag">
-                                        <option v-for="(flagName, flagAbbr) in flagList" v-bind:value="{name: flagName, icon: '/lib/famfamfam-flags/png/' + flagAbbr.toLowerCase() + '.png'}">
+                                        <option v-for="(flagName, flagAbbr) in flagList" v-bind:value="{name: flagName, icon: '/lib/svg-country-flags/svg/' + flagAbbr.toLowerCase() + '.svg'}">
                                             {{ flagName }}
                                         </option>
                                     </select>
