Fixed a bug on empty list of comentators

--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -121,7 +121,7 @@
             </details>
 
             <hr/>
-            <details v-if="scoreBoard.commentators && scoreBoard.commentators.length > 0">
+            <details>
                 <summary><strong>Comentators</strong></summary>
                 <div class="row">
                     <div v-for="(commentator, commentatorIndex) in scoreBoard.commentators" class="col-md-3">
